tests/invalid/undef_imported_mode_helper_1.m
%---------------------------------------------------------------------------%
% vim: ts=4 sw=4 et ft=mercury
%---------------------------------------------------------------------------%

:- module undef_imported_mode_helper_1.

:- interface.

:- pred bad(int, int).
:- mode bad(int, out) is det.

%---------------------------------------------------------------------------%

:- implementation.

bad(N, N).
